Reconfigure for BTTPAD7 Add comments
Added comments to some config files.
Reconfigured for BTT-Pad7

--- a/Hardware/fans.cfg
+++ b/Hardware/fans.cfg
@@ -43,31 +43,37 @@ fan_speed: 1.0
 #   is 1.0
 
 
+
+
+##############################################################################
+# No Longer Used - Reconfigured for BTT-Pad7
+##############################################################################
+
 #============================================================================
 #
 #                         RASPBERRY PI COOLING FAN
 #                      Configured control via BTT-Octopus 1.1 Fan5 (J22)
 #
 #============================================================================
-[temperature_fan Pi_Fan]
-pin:PD15
-max_power:1.0
-shutdown_speed: 0.0
+#[temperature_fan Pi_Fan]
+#pin:PD15
+#max_power:1.0
+#shutdown_speed: 0.0
 #cycle_time:
 #hardware_pwm:
 #kick_start_time:
-off_below: 0.99
+#off_below: 0.99
 #tachometer_pin:
 #tachometer_ppr:
 #tachometer_poll_interval:
 #enable_pin:
 #   See the "fan" section for a description of the above parameters.
-sensor_type: temperature_host
+#sensor_type: temperature_host
 #sensor_pin:
-control: watermark
-max_delta: 5
-min_temp: 0
-max_temp: 100
+#control: watermark
+#max_delta: 5
+#min_temp: 0
+#max_temp: 100
 #   See the "extruder" section for a description of the above parameters.
 #pid_Kp:
 #pid_Ki:
@@ -84,14 +90,14 @@ max_temp: 100
 #   A time value (in seconds) over which temperature measurements will
 #   be smoothed when using the PID control algorithm. This may reduce
 #   the impact of measurement noise. The default is 2 seconds.
-target_temp: 20.0
+#target_temp: 20.0
 #   A temperature (in Celsius) that will be the target temperature.
 #   The default is 40 degrees.
-max_speed: 1.0
+#max_speed: 1.0
 #   The fan speed (expressed as a value from 0.0 to 1.0) that the fan
 #   will be set to when the sensor temperature exceeds the set value.
 #   The default is 1.0.
-min_speed: 0.3
+#min_speed: 0.3
 #   The minimum fan speed (expressed as a value from 0.0 to 1.0) that
 #   the fan will be set to for PID temperature fans.
 #   The default is 0.3.
