--- a/Hardware/tmc2209.cfg
+++ b/Hardware/tmc2209.cfg
@@ -2,6 +2,8 @@
 # TMC2209 configuration
 ########################################
 
+#BTT Octopus v1.1 CS Pin = UART PIN
+
 #driver0
 [tmc2209 stepper_x]
 uart_pin: PC4
