--- a/printer.cfg
+++ b/printer.cfg
@@ -29,6 +29,8 @@
 [include Hardware/bltouch.cfg]              ; BL Touch settings
 [include Hardware/fans.cfg]                 ; Fan configuation & settings
 [include Hardware/MCU.cfg]                  ; MCU setting
+[include Hardware/static_temp.cfg]          ; EXTRA Temperature sensors
+
 
 #==========================================
 #
