--- a/Hardware/MCU.cfg
+++ b/Hardware/MCU.cfg
@@ -1,4 +1,4 @@
 [mcu]
-serial: /dev/serial/by-path/platform-fd500000.pcie-pci-0000:01:00.0-usb-0:1.1:1.0
-#serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_2D0012000A50534E4E313020-if00
+#serial: /dev/serial/by-path/platform-fd500000.pcie-pci-0000:01:00.0-usb-0:1.1:1.0
+serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_2D0012000A50534E4E313020-if00
 restart_method: command
