--- a/Hardware/static_temp.cfg
+++ b/Hardware/static_temp.cfg
@@ -1,5 +1,6 @@
 [temperature_sensor MCU]
 sensor_mcu: mcu
+sensor_type: temperature_mcu
 [temperature_sensor CB1]
 sensor_type: temperature_host
 #sensor_path: "/sys/class/thermal/thermal_zone0/temp"
